--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">资讯 <span class="caret"></span></a>
                             <ul class="dropdown-menu">
-                                <li><a href="#">图书会</a></li>
+                                <li><a href="Game\green\index.html" target="_blank">寻物游戏</a></li>
                                 <li><a href="#">跳蚤街</a></li>
-                                <li><a href="shiwuzhaohui.html" target="_blank">失物招领</a></li>
+                                <li><a href="shiwuzhaohui.html" target="_blank" >失物招领</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li class="dropdown-header">新闻</li>
                                 <li><a href="#">招聘信息</a></li>
